--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Aprendiendo Git</h1>
-    <p>Mis primeros pasos en el versionado de Código</p>
+    <p>Mis primeros pasos en el versionado de Código Escrito desde la rama html</p>
+    <ol>
+        <li>Elementos 1</li>
+        <li>Elementos 2</li>
+        <li>Elementos 3</li>
+        <li>Elementos 4</li>
+        <li>Elementos 5</li>
+    </ol>
+    <script>src="index.js"</script>
 </body>
 </html>
