--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
       <li>Otoño -21 septiembre</li>
       <li>Invierno - 21 diciembre</li>
     </ol>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum neque
+      dolor, debitis nulla temporibus cum quam tenetur voluptas, sequi quia
+      corporis consequuntur architecto iste enim cumque id, deserunt dicta modi.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+      corporis, blanditiis odit velit, a alias labore ea dicta molestias soluta
+      harum dolorum ut obcaecati rem optio nisi nulla mollitia et.
+    </p>
     <script>
       src = "index.js";
     </script>
