Agregando Imagen de Flujo Git}

--- a/index.html
+++ b/index.html
@@ -10,32 +10,10 @@
     <h1>Aprendiendo Git</h1>
 
     <p>
-      Mis primeros pasos en el versionado de Código y aprendiendo a resolver
-      conflictos entre ramas.
+      Mis primeros pasos en el versionado de Código con Git y Github.
     </p>
-    <ul>
-      <li>Elemento 1</li>
-      <li>Elemento 2</li>
-      <li>Elemento 3</li>
-      <li>Elemento 4</li>
-      <li>Elemento 5</li>
-    </ul>
-    <ol>
-      <li>Primavera -21 marzo</li>
-      <li>Verano -21 junio</li>
-      <li>Otoño -21 septiembre</li>
-      <li>Invierno - 21 diciembre</li>
-    </ol>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum neque
-      dolor, debitis nulla temporibus cum quam tenetur voluptas, sequi quia
-      corporis consequuntur architecto iste enim cumque id, deserunt dicta modi.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-      corporis, blanditiis odit velit, a alias labore ea dicta molestias soluta
-      harum dolorum ut obcaecati rem optio nisi nulla mollitia et.
-    </p>
+    <p>¿Quiéres dominar el uso de Git? Mira este <a href="https:://Jonmircha.com/git" target="_blank">Enlace</a>. </p>
+<img src="git-flow.png" alt="Flujo Básico de Git">
     <script>
       src = "index.js";
     </script>
